# MathCraft-Models

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_MATHCRAFT_OCR.md  pyproject.toml
mathcraft_ocr/: __init__.py  __main__.py  api.py  cache.py  cli.py  debug_blocks.py  doctor.py  downloader.py  error_patterns.py  errors.py  hardware.py  image.py  layout.py  manifest.py  profiles.py  providers.py  results.py  runtime.py  serialization.py  worker.py
mathcraft_ocr/adapters/: __init__.py  common.py  formula_detector.py  formula_recognizer.py  text_detector.py  text_recognizer.py
mathcraft_ocr/manifests/: models.v1.json
